# tree-sitter-codeowners

./: CODEOWNERS  Cargo.toml  grammar.js  package-lock.json  package.json  pyproject.toml
bindings/c/: tree-sitter-CODEOWNERS.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCodeowners/: CODEOWNERS.h
src/: grammar.json  node-types.json  parser.c
test/corpus/: main.txt
